// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should match snapshot loading 1`] = `
<LoadingScreen
  position="relative"
  style={Object {}}
/>
`;

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should match snapshot with schemes 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Permission Schemes"
    id="admin.permissions.permissionSchemes"
    values={Object {}}
  />
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Permission Schemes set the default permissions for Team Admins, Channel Admins and everyone else. Learn more about permission schemes in our [documentation](!https://about.mattermost.com/default-advanced-permissions)."
          id="admin.permissions.introBanner"
        />
      </span>
    </div>
  </div>
  <AdminPanelWithLink
    className=""
    disabled={false}
    linkTextDefault="Edit Scheme"
    linkTextId="admin.permissions.systemSchemeBannerButton"
    subtitleDefault="Set the default permissions inherited by all teams unless a [Team Override Scheme](!https://about.mattermost.com/default-team-override-scheme) is applied."
    subtitleId="admin.permissions.systemSchemeBannerText"
    titleDefault="System Scheme"
    titleId="admin.permissions.systemSchemeBannerTitle"
    url="/admin_console/user_management/permissions/system_scheme"
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should match snapshot without schemes 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Permission Schemes"
    id="admin.permissions.permissionSchemes"
    values={Object {}}
  />
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Permission Schemes set the default permissions for Team Admins, Channel Admins and everyone else. Learn more about permission schemes in our [documentation](!https://about.mattermost.com/default-advanced-permissions)."
          id="admin.permissions.introBanner"
        />
      </span>
    </div>
  </div>
  <AdminPanelWithLink
    className=""
    disabled={false}
    linkTextDefault="Edit Scheme"
    linkTextId="admin.permissions.systemSchemeBannerButton"
    subtitleDefault="Set the default permissions inherited by all teams unless a [Team Override Scheme](!https://about.mattermost.com/default-team-override-scheme) is applied."
    subtitleId="admin.permissions.systemSchemeBannerText"
    titleDefault="System Scheme"
    titleId="admin.permissions.systemSchemeBannerTitle"
    url="/admin_console/user_management/permissions/system_scheme"
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should show migration in-progress view 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Permission Schemes"
    id="admin.permissions.permissionSchemes"
    values={Object {}}
  />
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Permission Schemes set the default permissions for Team Admins, Channel Admins and everyone else. Learn more about permission schemes in our [documentation](!https://about.mattermost.com/default-advanced-permissions)."
          id="admin.permissions.introBanner"
        />
      </span>
    </div>
  </div>
  <AdminPanelWithLink
    className=""
    disabled={true}
    linkTextDefault="Edit Scheme"
    linkTextId="admin.permissions.systemSchemeBannerButton"
    subtitleDefault="Set the default permissions inherited by all teams unless a [Team Override Scheme](!https://about.mattermost.com/default-team-override-scheme) is applied."
    subtitleId="admin.permissions.systemSchemeBannerText"
    titleDefault="System Scheme"
    titleId="admin.permissions.systemSchemeBannerTitle"
    url="/admin_console/user_management/permissions/system_scheme"
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should show migration on hold view 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Permission Schemes"
    id="admin.permissions.permissionSchemes"
    values={Object {}}
  />
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Permission Schemes set the default permissions for Team Admins, Channel Admins and everyone else. Learn more about permission schemes in our [documentation](!https://about.mattermost.com/default-advanced-permissions)."
          id="admin.permissions.introBanner"
        />
      </span>
    </div>
  </div>
  <AdminPanelWithLink
    className=""
    disabled={true}
    linkTextDefault="Edit Scheme"
    linkTextId="admin.permissions.systemSchemeBannerButton"
    subtitleDefault="Set the default permissions inherited by all teams unless a [Team Override Scheme](!https://about.mattermost.com/default-team-override-scheme) is applied."
    subtitleId="admin.permissions.systemSchemeBannerText"
    titleDefault="System Scheme"
    titleId="admin.permissions.systemSchemeBannerTitle"
    url="/admin_console/user_management/permissions/system_scheme"
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should show normal view (jobs disabled after migration) 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Permission Schemes"
    id="admin.permissions.permissionSchemes"
    values={Object {}}
  />
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Permission Schemes set the default permissions for Team Admins, Channel Admins and everyone else. Learn more about permission schemes in our [documentation](!https://about.mattermost.com/default-advanced-permissions)."
          id="admin.permissions.introBanner"
        />
      </span>
    </div>
  </div>
  <AdminPanelWithLink
    className=""
    disabled={false}
    linkTextDefault="Edit Scheme"
    linkTextId="admin.permissions.systemSchemeBannerButton"
    subtitleDefault="Set the default permissions inherited by all teams unless a [Team Override Scheme](!https://about.mattermost.com/default-team-override-scheme) is applied."
    subtitleId="admin.permissions.systemSchemeBannerText"
    titleDefault="System Scheme"
    titleId="admin.permissions.systemSchemeBannerTitle"
    url="/admin_console/user_management/permissions/system_scheme"
  />
</div>
`;
